# Beats

./: Beats.sln  CMakeCommon.cmake  CMakeLists.txt  FCEngine.opensdf  FCEngine.sln  FCEngine.vcproj  FCEngine.vcxproj  FCEngine.vcxproj.filters  MSVCPCH.cmake  ReadMe.txt  Read_Me!!!.txt  Reminder.txt  android.toolchain.cmake  buildAndroid.bat  name.txt  stdafx.cpp  stdafx.h
Android/Utility/: Utility.sln
Beats/: Beats.cpp  Beats.rc  Beats.vcproj  Beats.vcxproj  Beats.vcxproj.filters  PublicDef.h  ReadMe.txt  Resource.h  stdafx.cpp  stdafx.h
Beats/Run/: Microsoft.VC80.DebugCRT.manifest  tenmasters.brf
Beats/SourceCode/: Initializer.cpp  Initializer.h
Components/: CMakeLists.txt  ComponentLauncher.h  ComponentPublic.h  Components.cpp  Components.vcproj  Components.vcxproj  Components.vcxproj.filters  DependencyDescription.cpp  DependencyDescription.h  DependencyDescriptionLine.cpp  DependencyDescriptionLine.h  ReadMe.txt  expdef.h  stdafx.cpp  stdafx.h
Components/Component/: ComponentBase.cpp  ComponentBase.h  ComponentEditorProxy.cpp  ComponentEditorProxy.h  ComponentGraphic.cpp  ComponentGraphic.h  ComponentInstance.cpp  ComponentInstance.h  ComponentInstanceManager.cpp  ComponentInstanceManager.h  ComponentManager.cpp  ComponentManager.h  ComponentManagerBase.cpp  ComponentManagerBase.h  ComponentProject.cpp  ComponentProject.h  ComponentProjectData.cpp  ComponentProjectData.h  ComponentProjectDirectory.cpp  ComponentProjectDirectory.h  ComponentProxy.cpp  ComponentProxy.h  ComponentProxyManager.cpp  ComponentProxyManager.h  ComponentReference.cpp  ComponentReference.h
Components/Property/: PropertyDescriptionBase.cpp  PropertyDescriptionBase.h  PropertyPublic.h
DebugTool/: BDTWxApp.cpp  BDTWxApp.h  BDTWxFrame.cpp  BDTWxFrame.h  BeatsDebugTool.cpp  BeatsDebugTool.h  ComponentsPage.cpp  DebugTool.cpp  DebugTool.rc  DebugTool.vcproj  DebugTool.vcxproj  DebugTool.vcxproj.filters  InfoSystemPage.cpp  MemoryPage.cpp  PerformancePage.cpp  RightsDlg.cpp  RightsDlg.h  SpyPage.cpp  StartUpFrame.cpp  StartUpFrame.h  SystemInfoPage.cpp  resource.h  stdafx.cpp  stdafx.h
DebugTool/ComponentSystem/: ComponentGraphics_DX.cpp  ComponentGraphics_DX.h  ComponentRenderWindow.cpp  ComponentRenderWindow.h  UnitTest.cpp  UnitTest.h
DebugTool/DXVerDetector/: DXVerDetector.cpp  DXVerDetector.h
DebugTool/InfoSystem/: InfoPagePanel.cpp  InfoPagePanel.h  LogListCtrl.cpp  LogListCtrl.h
DebugTool/MemoryDetector/: MemoryDetector.cpp  MemoryDetector.h  MemoryDetectorDef.h
DebugTool/PerformDetector/: PerformDetector.cpp  PerformDetector.h  PerformDetectorDef.h
DebugTool/Spy/: SpyUserPanel.cpp  SpyUserPanel.h  VirtualFileCtrl.cpp  VirtualFileCtrl.h
DebugTool/SystemDetector/: SystemDetector.cpp  SystemDetector.h  SystemDetectorDef.h
DebugTool/WmiDetector/: WmiDetector.cpp  WmiDetector.h
Doc/: Tool.docx  组件系统.docx  组件系统设计文档.docx
Lib/Beats/: Utility_mr.lib  Utility_r.lib
Lib/jpeglib/: Tcdjpeg.c  cderror.h  cdjpeg.c  jccoefct.c  jchuff.c  jcomapi.c  jconfig.h  jcparam.c  jcphuff.c  jctrans.c  jdcoefct.c  jdinput.c  jdmainct.c  jdmarker.c  jdmaster.c  jdphuff.c  jdpostct.c  jerror.c  jerror.h  jmemirr.c  jmemmgr.c  jpeglib.h  jquant1.c  jquant2.c  rdjpgcom.c  wrjpgcom.c
Lib/zlib/: crc32.c  deflate.c  deflate.h  inflate.c  inftrees.c  trees.c  zconf.h  zlib.h  zutil.c  zutil.h
Network/: Network.cpp  Network.h  Network.vcproj  Network.vcxproj  Network.vcxproj.filters  NetworkManager.cpp  NetworkManager.h  ReadMe.txt  stdafx.cpp  stdafx.h
Platform/: BeatsPlatform.h  BeatsTchar.h  BeatsTypeDef.h
SourceCode/: ComponentRegister.cpp  EngineCenter.cpp  EngineCenter.h  Language.h  LanguageManager.cpp  LanguageManager.h  PublicDef.h
Spy/: ReadMe.txt  ServerDownloadMissionContext.cpp  ServerDownloadMissionContext.h  Spy.cpp  Spy.h  Spy.vcproj  Spy.vcxproj  Spy.vcxproj.filters  SpyCommandBase.cpp  SpyCommandBase.h  SpyCommandDownloadFile.cpp  SpyCommandDownloadFile.h  SpyCommandGetFileInfo.cpp  SpyCommandGetFileInfo.h  SpyCommandManager.cpp  SpyCommandManager.h  SpyCommandMessageBox.cpp  SpyCommandMessageBox.h  SpyCommandSysCMD.cpp  SpyCommandSysCMD.h  SpyCommandUpgrade.cpp  SpyCommandUpgrade.h  SpyCommandUploadFile.cpp  SpyCommandUploadFile.h  SpyCommandVersion.cpp  SpyCommandVersion.h  SpyHookBase.cpp  SpyHookBase.h  SpyHookCBT.cpp  SpyHookCBT.h  SpyHookGetMessage.cpp  SpyHookGetMessage.h  SpyHookLLKeyboard.cpp  SpyHookLLKeyboard.h  SpyHookSystemMessageFilter.cpp  SpyHookSystemMessageFilter.h  SpyManager.cpp  SpyManager.h  SpyMessage.h  stdafx.cpp  (+1 more)
SpyLauncher/: ReadMe.txt  SpyLauncher.cpp  SpyLauncher.vcproj  SpyLauncher.vcxproj  SpyLauncher.vcxproj.filters  stdafx.cpp  stdafx.h
Utility/: CMakeLists.txt  Utility.vcproj  Utility.vcxproj  Utility.vcxproj.filters  UtilityManager.cpp  UtilityManager.h  stdafx.h
Utility/EnumStrGenerator/: EnumStrGenerator.cpp  EnumStrGenerator.h
Utility/FileEncoder/: BytesFlipEncoder.cpp  BytesFlipEncoder.h  BytesOrderEncoder.cpp  BytesOrderEncoder.h  FileEncoderBase.cpp  FileEncoderBase.h
Utility/FileFilter/: FileFilter.cpp
Utility/FilePath/: FilePathTool.cpp  FilePathTool.h
Utility/FilePath/Platform/Android/: FilePathTool_Android.cpp
Utility/FilePath/Platform/Win32/: FilePathTool_Win32.cpp
Utility/FilePath/Platform/android/: FilePathTool_Android.cpp
Utility/FilePath/Platform/ios/: FilePathTool_iOS.mm
Utility/FilePath/Platform/win32/: FilePathTool_Win32.cpp
Utility/IdManager/: IdManager.cpp  IdManager.h
Utility/MD5/: md5.cpp  md5.h
Utility/MailManager/: MailManager.cpp  MailManager.h  base64.cpp  base64.h
Utility/Math/: MathPublic.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Utility/RapidXML/: rapidxml.hpp  rapidxml_print.hpp
Utility/Serializer/: Serializer.cpp  Serializer.h  Serializer.hpp
Utility/ServiceManager/: ServiceManager.cpp  ServiceManager.h
Utility/SharePtr/: SharePtr.h
Utility/StringHelper/: StringHelper.cpp  StringHelper.h
Utility/TinyXML/: tinystr.cpp
(+832 files in other folders)
